--- a/auth-service/src/EC.AuthService.Web/Views/Account/SignIn.cshtml
+++ b/auth-service/src/EC.AuthService.Web/Views/Account/SignIn.cshtml
@@ -1,8 +1,31 @@
-@model dynamic
+@model EC.AuthService.Web.Models.SignInViewModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
     ViewBag.Title = "SignIn";
     Layout = "_Layout";
 }
 
-<h2>SignIn</h2>
+<div class="container">
+    <form asp-controller="Account" asp-action="SignIn" method="post" class="form-horizontal" role="form">
+        <div class="form-group">
+            <label asp-for="Email" class="col-md-2 control-label"></label>
+            <div class="col-md-5">
+                <input asp-for="Email" class="form-control"/>
+                <span asp-validation-for="Email" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <label asp-for="Password" class="col-md-2 control-label"></label>
+            <div class="col-md-5">
+                <input asp-for="Password" class="form-control"/>
+                <span asp-validation-for="Password" class="text-danger"></span>
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-5">
+                <input type="submit" class="btn btn-primary" value="SignIn"/>
+            </div>
+        </div>
+    </form>
+</div>
