--- a/auth-service/src/EC.AuthService.Web/Views/Shared/_Layout.cshtml
+++ b/auth-service/src/EC.AuthService.Web/Views/Shared/_Layout.cshtml
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=0.6"/>
-    <title>EShop</title>
+    <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>E-Shop</title>
+        <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
 </head>
 <body>
 <div id="root">
     @RenderBody()
 </div>
 </body>
+<script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
