add signup view

--- a/auth-service/src/EC.AuthService.Web/Views/Account/SignUp.cshtml
+++ b/auth-service/src/EC.AuthService.Web/Views/Account/SignUp.cshtml
@@ -1,8 +1,42 @@
-@model dynamic
+@model EC.AuthService.Web.Models.SignUpViewModel
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @{
     ViewBag.Title = "SignUp";
     Layout = "_Layout";
 }
 
-<h2>SignUp</h2>
+<div class="col-md-2 center rounded">
+    <div class="panel panel-info">
+        <div class="panel-heading">
+            <div class="panel-title text-center h3">E-Shop</div>
+        </div>
+        <div class="panel-body form-body">
+            <form asp-action="SignUp" asp-controller="Account" method="post" class="form-horizontal" role="form">
+                <div class="col-md-12 form-input">
+                    <input asp-for="Email" type="email" class="form-control" name="email" placeholder="Email">
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="col-md-12 form-input">
+                    <input asp-for="Name" type="text" class="form-control" name="name" placeholder="Name">
+                    <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
+                <div class="col-md-12 form-input">
+                    <input asp-for="Surname" type="text" class="form-control" name="surname" placeholder="Surname">
+                    <span asp-validation-for="Surname" class="text-danger"></span>
+                </div>
+                <div class="col-md-12 form-input">
+                    <input asp-for="Password" type="password" class="form-control" name="password" placeholder="Password">
+                    <span asp-validation-for="Password" class="text-danger"></span>
+                </div>
+                <div class="col-md-12">
+                    <button type="submit" class="btn btn-success col-md-12">Register</button>
+                </div>
+                <hr/>
+                <div class="text-center">
+                    <a asp-action="SignIn" asp-controller="Account" class="link-secondary">Already have an account?</a>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
