add identity entities

--- a/auth-service/src/EC.AuthService.Web/Views/Account/SignIn.cshtml
+++ b/auth-service/src/EC.AuthService.Web/Views/Account/SignIn.cshtml
@@ -1,4 +1,4 @@
-@model EC.AuthService.Web.Models.SignInViewModel
+@model EC.AuthService.Web.Account.Models.SignInViewModel
 
 @{
     ViewBag.Title = "SignIn";
