--- a/auth-service/src/EC.AuthService.Web/Views/Account/SignUp.cshtml
+++ b/auth-service/src/EC.AuthService.Web/Views/Account/SignUp.cshtml
@@ -1,4 +1,4 @@
-@model EC.AuthService.Web.Models.SignUpViewModel
+@model EC.AuthService.Web.Account.Models.SignUpViewModel
 
 @{
     ViewBag.Title = "SignUp";
